public/styles/global.scss
@import "~bootstrap/scss/bootstrap";
@import './variables.scss';

@import '../fonts/plusJakartaSans/web/PlusJakartaSans.css';
@import '../fonts/cormorantGaramond/stylesheet.css';
@import '../fonts/galleryModern/stylesheet.css';

html {
  transition: $transition-standard;
  border: 0;
}

body {
  margin: 0;
  background: $background;
  font-size: 16px; 
  line-height: 1.6;
  color: $dark-800; 
  font-weight: 400;
  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
  'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
  sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  white-space: pre-line;
}
h1, h2, h3, h4, h5 {  
  margin-bottom: 1.5rem; 
  line-height: 1.1;
  color: $dark-900; 
  font-weight: 800;
  font-variant-ligatures: none;
  font-family: 'PlusJakartaSans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
  'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
  sans-serif;}
h1 { font-size: 64px; }
h2 { font-size: 48px; }
h3 { font-size: 34px; }
h4 { font-size: 28px; }
h5 { font-size: 24px; }

h1.display1 {
  font-size: 104px;
  line-height: 1.1;
}

h1.display2 {
  font-size: 80px;
  line-height: 1.1;
}

p.extra-large { font-size: 24px; }
p.large {font-size: 20px; }
p { font-size: 16px;  color: $dark-800; }
p.small { font-size: 14px; }
p.caption { font-size: 12px; }
p.error { color: $error-900; }

a { 
  color: $primary-900; 
  &:hover { 
    color: $primary-900;
  }
}

.visuelt-regular { font-weight: normal }
.visuelt-medium { font-weight: 500}
.visuelt-bold { font-weight: bold}

.text-dark-high { color: $dark-900; }
.text-dark-med { color: $dark-800; }
.text-dark-low { color: $dark-700; }
.text-dark-dis { color: $dark-600; }

.text-light-high { color: $light-900; }
.text-light-med { color: $light-800; }
.text-light-low { color: $light-700; }
.text-light-dis { color: $light-600; }

.text-primary-high { color: $primary-900; }
.text-primary-med { color: $primary-800; }
.text-primary-low { color: $primary-700; }
.text-primary-dis { color: $primary-600; }

.text-success-high { color: $success-900; }
.text-success-med { color: $success-800; }
.text-success-low { color: $success-700; }
.text-success-dis { color: $success-600; }

.text-error-high { color: $error-900; }
.text-error-med { color: $error-800; }
.text-error-low { color: $error-700; }
.text-error-dis { color: error-600; }

.text-warning-high { color: $warning-900; }
.text-warning-med { color: $warning-800; }
.text-warning-low { color: $warning-700; }
.text-warning-dis { color: $warning-600; }

.font-weight-medium { font-weight: 500; }
.font-weight-semibold { font-weight: 600; }
.font-weight-bold { font-weight: 700; }

.text-gradient-1 { 
  background: $gradient-1;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.text-gradient-2 { 
  background: $gradient-2;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.text-gradient-3 { 
  background: linear-gradient(to right bottom, rgb(0, 0, 0) 30%, rgba(255, 255, 255, 0.38));
  // background: radial-gradient(40% 70% at 50% 100%, rgba(255, 255, 255, 0.4), rgb(255, 255, 255)) text;;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.text-gradient-0 {
  background: none;
  -webkit-background-clip:initial ;
  -webkit-text-fill-color: initial;
}


hr {border-top: 1px solid $dark-300;}

// Colours

.bg-primary-900 { background: $primary-900!important; }
.bg-primary-800 { background: $primary-800!important; }
.bg-primary-700 { background: $primary-700!important; }
.bg-primary-600 { background: $primary-600!important; }
.bg-primary-500 { background: $primary-500!important; }
.bg-primary-400 { background: $primary-400!important; }
.bg-primary-300 { background: $primary-300!important; }
.bg-primary-200 { background: $primary-200!important; }
.bg-primary-100 { background: $primary-100!important; }

.bg-dark-900 { background: $dark-900!important; }
.bg-dark-800 { background: $dark-800!important; }
.bg-dark-700 { background: $dark-700!important; }
.bg-dark-600 { background: $dark-600!important; }
.bg-dark-500 { background: $dark-500!important; }
.bg-dark-400 { background: $dark-400!important; }
.bg-dark-300 { background: $dark-300!important; }
.bg-dark-200 { background: $dark-200!important; }
.bg-dark-100 { background: $dark-100!important; }

.bg-light-900 { background: $light-900!important; }
.bg-light-800 { background: $light-800!important; }
.bg-light-700 { background: $light-700!important; }
.bg-light-600 { background: $light-600!important; }
.bg-light-500 { background: $light-500!important; }
.bg-light-400 { background: $light-400!important; }
.bg-light-300 { background: $light-300!important; }
.bg-light-200 { background: $light-200!important; }
.bg-light-100 { background: $light-100!important; }

.bg-success-900 { background: $success-900!important; }
.bg-success-800 { background: $success-800!important; }
.bg-success-700 { background: $success-700!important; }
.bg-success-600 { background: $success-600!important; }
.bg-success-500 { background: $success-500!important; }
.bg-success-400 { background: $success-400!important; }
.bg-success-300 { background: $success-300!important; }
.bg-success-200 { background: $success-200!important; }
.bg-success-100 { background: $success-100!important; }

.bg-warning-900 { background: $warning-900!important; }
.bg-warning-800 { background: $warning-800!important; }
.bg-warning-700 { background: $warning-700!important; }
.bg-warning-600 { background: $warning-600!important; }
.bg-warning-500 { background: $warning-500!important; }
.bg-warning-400 { background: $warning-400!important; }
.bg-warning-300 { background: $warning-300!important; }
.bg-warning-200 { background: $warning-200!important; }
.bg-warning-100 { background: $warning-100!important; }

.bg-error-900 { background: $error-900!important; }
.bg-error-800 { background: $error-800!important; }
/* ... */

